--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
 
     <title>A Basic D3 map</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
     <script src="http://d3js.org/d3.v5.min.js" charset="utf-8"></script>
     <script src="js/seattle.js"></script>
 
-    <!-- <script src="data/neighborhoods.json"></script> -->
-
+    <h1>Listings in Seattle by Neighborhood</h1>
+    <h2></h2>
 </head>
 
 <body>
 
     <script>
-    
-
-    
-
     </script>
 
 </body>
